--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/Joycon/JoyconLib_plugins/win64/hidapi.dll
